<?php  
  namespace \API\Common;

interface IMailAddress extends IAddress, IAddressee
{ 
}