<?php  
namespace API\Common;

interface ICreateInstance
{
    /**
     * @return instance of this class
     */
    function CreateInstance():object;
}