<?php  
namespace API\Common;

interface ITest
{
    function test():bool;
}