<?php  
namespace API\Mail;

interface IMessage extends IHeader, IContent
{
}